--- a/sanity/sanity.mdx
+++ b/sanity/sanity.mdx
@@ -21,12 +21,12 @@ Add environment variable files
 
 <File
   path="./.env.development.template"
-  content=""
+  content="https://git.io/JftD0"
 />
 
 <File
   path="./.env.production"
-  content=""
+  content="https://git.io/JftDE"
 />
 
 ---
