--- a/sanity/sanity.mdx
+++ b/sanity/sanity.mdx
@@ -17,7 +17,7 @@ Install the Sanity plugin in gatsby-config.js
 
 ---
 
-Add environment variable files
+Add environment variable files and create a client config
 
 <File
   path="./.env.development.template"
@@ -27,6 +27,11 @@ Add environment variable files
 <File
   path="./.env.production"
   content="https://git.io/JftDE"
+/>
+
+<File
+  path="./client-config.js"
+  content="https://git.io/Jfsnu"
 />
 
 ---
