update sanity recipe

--- a/sanity/sanity.mdx
+++ b/sanity/sanity.mdx
@@ -6,6 +6,7 @@
 
 Install NPM packages
 
+<NPMPackage name="gatsby-source-sanity" />
 <NPMPackage name="@sanity/image-url" />
 <NPMPackage name="@sanity/block-content-to-react" />
 
